2008-12-22  Jürg Billeter  <j@bitron.ch>

	* vala/valastruct.vala:

	Fix type id for library structs registered as boxed types

2008-12-22  Thijs Vermeir  <thijsvermeir@gmail.com>

	* vapi/glib-2.0.vapi:

	Add g_remove binding

	* vapi/packages/gstreamer-0.10/gstreamer-0.10.metadata:

	Fix typo

2008-12-22  Jürg Billeter  <j@bitron.ch>

	* vala/valastruct.vala:

	Use BOXED as marshaller name for structs with type id

2008-12-21  Jürg Billeter  <j@bitron.ch>

	* vala/valastruct.vala:
	* gobject/valaccodebasemodule.vala:
	* gobject/valagobjectmodule.vala:
	* vapi/glib-2.0.vapi:

	Support boxed structs as GObject properties,
	based on patch by Étienne Bersac, fixes bug 520001

2008-12-21  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:

	Use `const' for struct input parameters, fixes bug 548413

2008-12-21  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-base-0.10/:

	Fix GstBaseSrc and GstBaseTransform bindings,
	patch by Evan Nemerson, fixes bug 552562

	* vapi/gstreamer-base-0.10.vapi: regenerated

2008-12-20  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeassignmentmodule.vala:
	* gobject/valaccodebasemodule.vala:
	* gobject/valaccodecontrolflowmodule.vala:
	* gobject/valaccodemethodcallmodule.vala:
	* gobject/valagasyncmodule.vala:
	* gobject/valagerrormodule.vala:

	More closure fixes

2008-12-19  Jürg Billeter  <j@bitron.ch>

	* vapi/atk.vapi:
	* vapi/gdk-2.0.vapi:
	* vapi/gdk-pixbuf-2.0.vapi:
	* vapi/gio-2.0.vapi:
	* vapi/gio-unix-2.0.vapi:
	* vapi/gstreamer-0.10.vapi:
	* vapi/gstreamer-audio-0.10.vapi:
	* vapi/gstreamer-base-0.10.vapi:
	* vapi/gstreamer-check-0.10.vapi:
	* vapi/gstreamer-controller-0.10.vapi:
	* vapi/gstreamer-dataprotocol-0.10.vapi:
	* vapi/gstreamer-fft-0.10.vapi:
	* vapi/gstreamer-interfaces-0.10.vapi:
	* vapi/gstreamer-net-0.10.vapi:
	* vapi/gstreamer-pbutils-0.10.vapi:
	* vapi/gstreamer-riff-0.10.vapi:
	* vapi/gstreamer-rtp-0.10.vapi:
	* vapi/gstreamer-rtsp-0.10.vapi:
	* vapi/gstreamer-sdp-0.10.vapi: