@@ -1,5 +1,12 @@
 2008-12-22  Jürg Billeter  <j@bitron.ch>
 
+	* gobject/valaccodebasemodule.vala:
+
+	Use copy function in generated dup function for structs if
+	necessary
+
+2008-12-22  Jürg Billeter  <j@bitron.ch>
+
 	* vala/valastruct.vala:
 
 	Fix type id for library structs registered as boxed types
